// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button. Should be render <Button />. 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    className=""
    disabled=""
    form="form"
    onClick={null}
    type="button"
>
    Send
</Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": "Send",
      "className": "",
      "disabled": "",
      "form": "form",
      "onClick": null,
      "type": "button",
    },
    "ref": null,
    "rendered": "Send",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "Send",
        "className": "",
        "disabled": "",
        "form": "form",
        "onClick": null,
        "type": "button",
      },
      "ref": null,
      "rendered": "Send",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button. Should be render disabled <Button />. 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    className=""
    disabled={true}
    form="form"
    onClick={null}
    type="button"
>
    Send
</Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": "Send",
      "className": "",
      "disabled": true,
      "form": "form",
      "onClick": undefined,
      "type": "button",
    },
    "ref": null,
    "rendered": "Send",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "Send",
        "className": "",
        "disabled": true,
        "form": "form",
        "onClick": undefined,
        "type": "button",
      },
      "ref": null,
      "rendered": "Send",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
